# Utility

./: CMakeLists.txt  CMakeSettings.json  README.md  Utility.sln
Utility/: Utility.vcxproj  Utility.vcxproj.filters
Utility/Source/: AssertException.h  Console.h  Exception.h  Global.h  HrExpection.h  ThreadPool.h  Timer.cpp  Timer.h  Utility.h  Window.cpp  Window.h  main.cpp
Utility/Source/Test/: LockTest.h
Utility/Source/Unuse/: MySQLUtility.h  Timer.cpp  Timer.h
test/: CMakeLists.txt
test/DrogonWeb/: CMakeLists.txt  HTTPApp.cpp  HTTPApp.h  LogDefine.cpp  LogDefine.h  config.json  main.cpp
test/DrogonWeb/Controller/: Api_v1_DeviceInfo.cc  Api_v1_DeviceInfo.h  Api_v1_DeviceVideo.cc  Api_v1_DeviceVideo.h  Api_v1_FileCtrl.cc  Api_v1_FileCtrl.h  Api_v1_InfraredCtrl.cc  Api_v1_InfraredCtrl.h  Api_v1_RelayCtrl.cc  Api_v1_RelayCtrl.h  Api_v1_RemoteCall.cc  Api_v1_RemoteCall.h
test/DrogonWeb/Model/: FileMark.cc  FileMark.h  RemoteDeviceInfo.cc  RemoteDeviceInfo.h  model.json
test/DrogonWeb/Service/: Session.h  TcpListener.h
test/HelloWorld/src/: HelloWorld.cpp
test/src/: HelloWorld.cpp  ImGuiWindow.cpp  thread_pool.cpp
utility/: CMakeLists.txt
utility/inc/: Global.h  LogDefine.h  ThreadPool.h  Utility.h  Window.h
utility/include/: GlobalVariable.h  ThreadPool.h
utility/src/: Global.cpp  Utility.cpp
utility/test/: CMakeLists.txt
utility/test/src/: ThreadPoolTest.cpp
